tests/should_fail/import_duplicate_name.fit
import import_duplicate_name_a
import import_duplicate_name_b

fn run() -> ()
